@@ -1,5 +1,9 @@
 2005-12-04  Joseph S. Myers  <joseph@codesourcery.com>
 
+	* gcc.dg/c90-const-expr-5.c, gcc.dg/c99-const-expr-5.c: New tests.
+
+2005-12-04  Joseph S. Myers  <joseph@codesourcery.com>
+
 	* gcc.dg/format/cast-1.c: New test.
 
 2005-12-04  Roger Sayle  <roger@eyesopen.com>
